# OpenGLBasics

./: BrightAndDim_FragmentShader.fs  BrightAndDim_VertexShader.vs  CMakeLists.txt  Camera.h  GLRenderSystem.h  GLShader.h  GLWindow.h  main_Cut.cpp
figures/: Squres.h
glad/include/glad/: glad.h
glad/src/: glad.c
